[gd_scene load_steps=2 format=3 uid="uid://alert_item"]

[ext_resource type="Script" path="res://scripts/UI/Components/AlertItem.gd" id="1_alert_item"]

[node name="AlertItem" type="Panel"]
custom_minimum_size = Vector2(250, 30)
script = ExtResource("1_alert_item")

[node name="ContentContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="AlertLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alert message"
autowrap_mode = 3

[node name="TimeLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
text = "00:00"
horizontal_alignment = 2